fix: zoom on mobile

--- a/src/components/canvas/Canvas.module.css
+++ b/src/components/canvas/Canvas.module.css
@@ -35,6 +35,7 @@
     var(--mantine-color-white),
     var(--mantine-color-dark-2)
   );
+  touch-action: none;
 }
 
 .canvasGrid {
